--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "n8n-nodes-shopify-graphql",
-  "version": "0.1.0",
-  "description": "n8n community node for Shopify GraphQL API with smart batching and rate limiting",
+  "version": "2.0.0",
+  "description": "n8n community node for Shopify GraphQL API with dynamic loading, smart dropdowns, and intelligent field selection",
   "keywords": [
     "n8n-community-node-package",
     "shopify",
