fix: Remove monolithic node - Clean modular-only architecture
CRITICAL FIX: Removed monolithic node causing deployment confusion

✅ WHAT CHANGED:
- Removed ShopifyGraphql.node.ts from repository (moved to backup)
- Clean build now contains ONLY modular architecture
- Dist folder reduced from 87KB monolith + 6KB modular to 6KB modular only
- Added gitignore rule to prevent monolithic file from being re-committed

✅ DEPLOYMENT VERIFICATION:
- Only ShopifyGraphqlModular.node.js will be deployed (6,192 bytes)
- Package.json correctly points to modular version
- All dynamic loadOptions methods included in build
- Version 2.0 branding and dynamic icon included

✅ BACKUP PRESERVED:
- Monolithic version saved as ../ShopifyGraphql-monolithic-backup.node.ts
- Available locally for reference but not deployed

This should resolve the n8n deployment issue where the old monolithic interface was appearing instead of the new dynamic version.

--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,9 @@ yarn-error.log*
 # Build output
 dist/
 
+# Keep monolithic node local only (use modular version for GitHub)
+nodes/ShopifyGraphql/ShopifyGraphql.node.ts
+
 # Environment variables
 .env
 .env.local
