--- a/package.json
+++ b/package.json
@@ -46,7 +46,9 @@
     ]
   },
   "devDependencies": {
-    "@typescript-eslint/parser": "^5.45.0",
+    "@typescript-eslint/eslint-plugin": "^8.37.0",
+    "@typescript-eslint/parser": "^5.62.0",
+    "eslint": "^9.31.0",
     "eslint-plugin-n8n-nodes-base": "^1.11.0",
     "gulp": "^4.0.2",
     "n8n-workflow": "*",
